Opened 2 years ago
Closed 2 years ago
#18269 closed bug (fixed)
Can't build Haiku on Haiku
Reported by: | pulkomandy | Owned by: | waddlesplash |
---|---|---|---|
Priority: | high | Milestone: | Unscheduled |
Component: | Build System | Version: | R1/beta4 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
C++ objects/haiku_host/x86_64/release/tools/fs_shell/uio.o ../haiku/src/tools/fs_shell/uio.cpp: In function 'fssh_ssize_t fssh_readv_pos(int, fssh_off_t, const fssh_iovec*, int)': ../haiku/src/tools/fs_shell/uio.cpp:82:16: error: '_kern_readv' was not declared in this scope 82 | return _kern_readv(fd, pos, systemVecs, count); | ^~~~~~~~~~~ ../haiku/src/tools/fs_shell/uio.cpp: In function 'fssh_ssize_t fssh_writev_pos(int, fssh_off_t, const fssh_iovec*, int)': ../haiku/src/tools/fs_shell/uio.cpp:117:16: error: '_kern_writev' was not declared in this scope 117 | return _kern_writev(fd, pos, systemVecs, count); | ^~~~~~~~~~~~ gcc -c "../haiku/src/tools/fs_shell/uio.cpp" -O2 -Wall -Wno-trigraphs -Wno-ctor-dtor-privacy -Woverloaded-virtual -Wpointer-arith -Wcast-align -Wsign-compare -Wno-multichar -include ../haiku/headers/build/HaikuBuildCompatibility.h -DFS_SHELL=1 -DHAIKU_BUILD_COMPATIBILITY_H -D__STRICT_ANSI__ -DARCH_x86_64 -D_NO_INLINE_ASM -D__NO_INLINE__ -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -DHAIKU_HOST_USE_XATTR -DHAIKU_HOST_PLATFORM_HAIKU -DHAIKU_HOST_PLATFORM_64_BIT -DHAIKU_PACKAGING_ARCH=\"x86_64\" -iquote ../haiku/build/user_config_headers -iquote ../haiku/build/config_headers -iquote ../haiku/src/tools/fs_shell -iquote objects/common/tools/fs_shell -iquote objects/haiku_host/x86_64/common/tools/fs_shell -iquote objects/haiku/x86_64/common/tools/fs_shell -I ../haiku/headers/build -I ../haiku/headers/private/fs_shell -I ../haiku/headers/private/shared -I ../haiku/headers/private/file_systems -I ../haiku/headers/build/host/haiku_host -o "objects/haiku_host/x86_64/release/tools/fs_shell/uio.o" ...failed C++ objects/haiku_host/x86_64/release/tools/fs_shell/uio.o ...
Broken in hrev56769 I assume?
Note:
See TracTickets
for help on using tickets.
Fixed in hrev56779.