fs_shell: Use proper readv/writev functions on Haiku hosts.

Fixes #18269.